<resources>
    <string name="app_name">AllEat</string>
    <string name="slogan">Order Eat Pay with AllEat - </string>
    <string name="textview">TextView</string>
    <string name="description">description</string>
    <string name="producturl">producturl</string>
    <string name="price">price</string>
    <string name="product">product</string>
    <string name="add_product">add_product</string>
    <string name="customer">Customer</string>
    <string name="service_provider">Service Provider</string>
    <string name="paybox_url">paybox url</string>
    <string name="helen">Helen</string>
    <string name="name">Name</string>
    <string name="_1234">1234</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pizza">pizza</string>
    <string name="_110">110</string>
</resources>