<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RestaurantSide.LoginPage">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:text="1"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp"
            android:hint="@string/phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="10"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        android:text="@string/_1234"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:inputType="textPassword"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="10"
        app:met_primaryColor="@android:color/white"
        app:met_singleLineEllipsis="true"/>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/regName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        android:text="@string/helen"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:inputType="textPersonName"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="10"
        app:met_primaryColor="@android:color/white"
        app:met_singleLineEllipsis="true"/>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/payBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        android:text="https://payboxapp.page.link/kD8DiY3bPTwr3eMn6"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:inputType="textPersonName"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        android:hint="@string/paybox_url"
        app:met_primaryColor="@android:color/white"
        app:met_singleLineEllipsis="true"/>


    </LinearLayout>


    <Button
        android:id="@+id/regButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="65dp"
        android:layout_weight="1"
        android:text="Register"
        android:textColor="@android:color/white"
        app:cornerRadius="4dp"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="612dp"
        android:text="Register"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />


</RelativeLayout>